# Pyp-Boy

./: BOM.csv  JOURNAL.md  README.md
Pip Boy wiring/: #auto_saved_files#  Pip Boy wiring.kicad_prl  Pip Boy wiring.kicad_pro  Pip Boy wiring.kicad_sch
Pyp-Boy CAD Models/: Part Studio 1 - Arm Back.step  Part Studio 1 - Arm Front.step  Part Studio 1 - Electronic Housing Rear Plate.step  Part Studio 1 - Electronic Housing.step  Part Studio 1 - Latch Base.step  Part Studio 1 - Latch Handle.step  Part Studio 1 - Latch Hook.step  Part Studio 1 - Left-Right Control Knob.step  Part Studio 1 - Menu Select Button.step  Part Studio 1 - Primary Menu Nav Wheel.step  Part Studio 1 - Radio Tuner Dial.step  Part Studio 1 - Screen Front Cover.step  Part Studio 1 - Secondary Menu Nav Wheel.step  Part Studio 1 - Up-Down Control Knob.step  PyP-Boy FInished CAD Model.step  Pyp-Boy CAD Model.step
Pyp-Boy CAD Models/PyP-Boy Finished CAD Files/: Part Studio 1 - Arm Back.step  Part Studio 1 - Arm Front.step  Part Studio 1 - Electronic Housing Rear Plate.step  Part Studio 1 - Electronic Housing.step  Part Studio 1 - Latch Base.step  Part Studio 1 - Latch Handle.step  Part Studio 1 - Latch Hook.step  Part Studio 1 - Left-Right Control Knob.step  Part Studio 1 - Menu Select Button.step  Part Studio 1 - Primary Menu Nav Wheel.step  Part Studio 1 - RPI Zero Mounting Bracket 1.step  Part Studio 1 - RPI Zero Mounting Bracket 2.step  (+4 more)
input/: Cargo.toml
input/src/: main.rs
pyp-tui/: Cargo.toml  test.md
pyp-tui/data/: db.json
pyp-tui/src/: kb.rs  main.rs  menus.rs  render_tabs.rs
