[package]
name = "pyp-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
max3010x = "0.2.0"
linux-embedded-hal = "0.4.0"
osm-geo-mapper = "0.8.0"
